fixed fab z-index

--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -25,7 +25,7 @@ body {
     }    
 
     & > .fab {
-        z-index: 1;
+        z-index: 3;
         position: fixed;
         bottom: var(--space-default);
         right: var(--space-default);
@@ -34,6 +34,7 @@ body {
             position: sticky;
             top: 0;
             left: 0;
+            z-index: 1;
         }
 
         @include breakpoint(lg) {
